# clutter

./: README  clutter.buildinfo.in  clutter.cabal  configure  configure.ac
src/: Clutter.hs  Cogl.hsc
src/Clutter/: Actor.hs  Actor.hsc  Alpha.hs  Animate.hsc  AnimationMode.hsc  Behavior.hs  Color.hsc  Container.hsc  Event.hs  Event.hsc  GLib.hsc  Group.hs  Init.hsc  Main.hs  Path.hs  Playable.hs  Private.hs  Stage.hs  Timeline.hs  Timeline.hsc  Utils.hs
src/Clutter/Actor/: Rectangle.hs  Rectangle.hsc  Text.hs  Text.hsc
src/Clutter/Behavior/: Depth.hs  Opacity.hs  Path.hs  Rotate.hs  Scale.hs
src/Clutter/Container/: Group.hs  Stage.hs
src/Clutter/Private/: Enums.hsc  GLib.hsc  Types.hs  Types.hsc
src/Cogl/: Color.hsc  Material.hsc  Prim.hsc  Texture.hsc
tests/: Container.hs  Opacity.hs  Path.hs  Rectangle.hs  Text.hs  TextEdit.hs  Timelines.hs  Tut1.hs
tests/behavior/: Depth.hs  Opacity.hs  Path.hs  Rotate.hs  Scale.hs
