name:           clutter
version:        0.0.1
build-type:     Simple
hs-source-dirs: src
cabal-version:  >= 1.6

build-depends:
  base >= 4

pkgconfig-depends:
  clutter-1.0 >= 1.0

exposed-modules:
  Clutter
  Clutter.Actor
  Clutter.Actor.Rectangle
  Clutter.Actor.Text
  Clutter.Alpha
  Clutter.Behavior
  Clutter.Behavior.Depth
  Clutter.Behavior.Opacity
  Clutter.Behavior.Path
  Clutter.Behavior.Rotate
  Clutter.Behavior.Scale
  Clutter.Color
  Clutter.Container
  Clutter.Container.Group
  Clutter.Container.Stage
  Clutter.Event
  Clutter.Init
  Clutter.Path
  Clutter.Playable
  Clutter.Timeline
  Cogl
  Cogl.Color
  Cogl.Material
  Cogl.Prim
  Cogl.Texture

other-modules:
  Clutter.Private
  Clutter.Private.GLib
  Clutter.Private.Types
  Clutter.Private.Enums

extensions:
  ForeignFunctionInterface
  DeriveDataTypeable

GHC-options:
  -O2 -Wall


